examples/error/gen/grpc/divider/client/client.go
// Code generated by goa v2.0.0-wip, DO NOT EDIT.
//
// divider GRPC client
//
// Command:
// $ goa gen goa.design/goa/examples/error/design -o
// $(GOPATH)/src/goa.design/goa/examples/error

package client

import (
	"context"

	goa "goa.design/goa"
	dividerpb "goa.design/goa/examples/error/gen/grpc/divider"
	"google.golang.org/grpc"
)

// Client lists the service endpoint gRPC clients.
type Client struct {
	grpccli dividerpb.DividerClient
	opts    []grpc.CallOption
}

// NewClient instantiates gRPC client for all the divider service servers.
func NewClient(cc *grpc.ClientConn, opts ...grpc.CallOption) *Client {
	return &Client{
		grpccli: dividerpb.NewDividerClient(cc),
		opts:    opts,
	}
}

// IntegerDivide calls the "IntegerDivide" function in dividerpb.DividerClient
// interface.
func (c *Client) IntegerDivide() goa.Endpoint {
	return func(ctx context.Context, v interface{}) (interface{}, error) {
		er, err := EncodeIntegerDivideRequest(ctx, v)
		if err != nil {
			return nil, err
		}
		req := er.(*dividerpb.IntegerDivideRequest)
		resp, err := c.grpccli.IntegerDivide(ctx, req, c.opts...)
		if err != nil {
			return nil, err
		}
		r, err := DecodeIntegerDivideResponse(ctx, resp)
		if err != nil {
			return nil, err
		}
		res := r.(int)
		return res, nil
	}
}

// Divide calls the "Divide" function in dividerpb.DividerClient interface.
func (c *Client) Divide() goa.Endpoint {
	return func(ctx context.Context, v interface{}) (interface{}, error) {
		er, err := EncodeDivideRequest(ctx, v)
		if err != nil {
			return nil, err
		}
		req := er.(*dividerpb.DivideRequest)
		resp, err := c.grpccli.Divide(ctx, req, c.opts...)
		if err != nil {
			return nil, err
		}
		r, err := DecodeDivideResponse(ctx, resp)
		if err != nil {
			return nil, err
		}
		res := r.(float64)
		return res, nil
	}
}
